--- a/tutorial009-ControlFlowOne-Loops.ipynb
+++ b/tutorial009-ControlFlowOne-Loops.ipynb
@@ -811,10 +811,11 @@
     }
    ],
    "source": [
-    "day = 1\n",
-    "pizza = 0\n",
-    "while day < 14 :\n",
-    "    pizza = pizza + 1\n",
+    "day = 1 #counter\n",
+    "pizza = 0 \n",
+    "while day < 14 : #while counter < max_value \n",
+    "    pizza = pizza + 1 #operations to be performed while the condition is not met, yet.\n",
+    "    #the code above says that as long as the days are less than 14, keep adding +1 to pizza. to signify adding of days: we used: 'day += 1'\n",
     "    print('today is day #,', day, 'so far I ate', pizza, 'pizzas')\n",
     "    day += 1"
    ]
@@ -1048,7 +1049,7 @@
    "id": "5919c6ca",
    "metadata": {},
    "source": [
-    "In reality, we could have used the `brake` command also in combination with a `for` loop. So, the situations where a while and for loop diverge are limited. Yet, one or the other are often times preferable, especially for clarity of programming style (e.g., your colleagues reading your code will be happier, if you write simple, easy to read code)."
+    "In reality, we could have used the `break` command also in combination with a `for` loop. So, the situations where a while and for loop diverge are limited. Yet, one or the other are often times preferable, especially for clarity of programming style (e.g., your colleagues reading your code will be happier, if you write simple, easy to read code)."
    ]
   },
   {
