--- a/tutorial014-Numpy-CreatingPythongFunctions.ipynb
+++ b/tutorial014-Numpy-CreatingPythongFunctions.ipynb
@@ -60,7 +60,7 @@
     "### Functions\n",
     "\n",
     "Functions are code methods that allow to encapsulate useful code in a reusable form. Methods exist to speed up your data science work, reduce mustakes and, eliminate extra typing needed when reusing code. These methods are called [**functions**](https://en.wikipedia.org/wiki/Subroutine).\n",
-    "\n",
+    "Functions are a type of method that help to store useful code that can be used later on. \n",
     "[Functions, a.k.a. subroutines](https://en.wikipedia.org/wiki/Subroutine) are sequences of code packaged as units. The units can be called at different locations in code to quickly and efficiently perform the oprations implemented in the packaged code. Functions are used to address situations just like the ones described above, where a section of code is used over and over again. Functions accept inputs and return outputs. Functions, contain useful code that performs operations that are likely to be used multiple times. \n",
     "\n",
     "Functions can help make code shorter, more nimble, and easier to read. "
@@ -79,24 +79,27 @@
    "id": "6402a675",
    "metadata": {},
    "source": [
-    "### Flipping a coing to choose lunch\n",
+    "### Flipping a coin to choose lunch\n",
     "\n",
     "A coin flip operation is a good, easy, example to describe how functions work in python.\n",
     "\n",
     "Imagine wanting to make a function that works just like the flip of a coin. For fun, imagine wanting to use the function to pick your lunch *Tacos!* or *Pizza!* being your options. Let's look at our first example of a function.\n",
     "\n",
-    "The code below is an example of how we can do something like that, simulate coinflips. To implement the code a function was defined using Python's syntax. In Python, functions are defined with a function name and the special word `def` in front of it."
+    "The code below is an example of how we can do something like that, simulate coinflips. To implement the code a function was defined using Python's syntax. In Python, functions are defined with a function name and the special word `def` in front of it.\n",
+    "\n",
+    "How to call functions: \n",
+    "def ___function name___     ()   : "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a8caae49",
    "metadata": {},
    "outputs": [],
    "source": [
     "def coinflip() :\n",
-    "    import numpy as np\n",
+    "    import numpy as np # import numpy so that we can use the functions in numpy(i.e flip)\n",
     "    flip = np.random.randint(2) # return a random 0 or 1\n",
     "    if flip == 0 :\n",
     "        result = 'Pizza!'\n",
@@ -107,10 +110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "315ae776",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pizza!'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Let's test this function. \n",
     "# Run this cell multiple times\n",
@@ -198,10 +212,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "adfcad24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Heads!'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def coinflip() :\n",
     "    import numpy as np\n",
@@ -210,7 +235,8 @@
     "        result = 'Tails!'\n",
     "    else :\n",
     "        result = 'Heads!'\n",
-    "    return result"
+    "    return result\n",
+    "coinflip ()"
    ]
   },
   {
@@ -227,9 +253,9 @@
    "metadata": {},
    "source": [
     "Two additional bits of code are important to dissect from the code above.\n",
-    "The second line of code `import numpy as np` in the block shows that imports must be done inside the function definition. This is because the function does not share the whole software environment and variables outside. So variables and operations inside a function will need their own definitions and imports. \n",
+    "The second line of code `import numpy as np` in the block shows that ____imports must be done inside the function *definition___. This is because the function does not share the whole software environment and variables outside. So variables and operations inside a function will need their own definitions and imports. \n",
     "\n",
-    "In the case of our coinflip we import `numpy`."
+    "In the case of our coinflip we import `numpy`. "
    ]
   },
   {
@@ -238,7 +264,7 @@
    "metadata": {},
    "source": [
     "`def coinflip() :\n",
-    "import numpy as np`"
+    " import numpy as np`"
    ]
   },
   {
@@ -253,11 +279,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "5474599f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m myarrayd \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39marray ([\u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m6\u001b[39m])\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m (myarrayd)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "myarrayd = np.array ([2, 3, 4, 5, 6])\n",
+    "print (myarrayd)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,7 +306,8 @@
    "metadata": {},
    "source": [
     "  - Where you able to define the numpy array? Why not? Use this cell to explain what is happening here, why are you suddenly not able to define a numpy array? What should you do before being able to define one?\n",
-    "\n"
+    "\n",
+    "***The np is not defined beacuse it is not defined under the function. In order for numpy to be imported and used in teh code, it needs to be defined inside the function***"
    ]
   },
   {
@@ -307,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "8e10138e",
    "metadata": {},
    "outputs": [],
@@ -322,12 +364,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef1dfcc8",
+   "cell_type": "markdown",
+   "id": "4ea4956e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Without the 'return function', the coinflip does not work. The return function is needed to return the variables and data generated by the function. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -397,14 +439,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "e95b7edf",
    "metadata": {},
    "outputs": [],
    "source": [
     "def my_normal_data():\n",
     "    import numpy as np\n",
-    "    data = 5 + 2*np.random.randn(10,1)\n",
+    "    data = 5 + 2*np.random.randn(10,1) # data is defined as: 10 numbers, with a mean of 5 and a SD of 2. \n",
     "    return data"
    ]
   },
@@ -418,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "a7b95450",
    "metadata": {},
    "outputs": [],
@@ -428,10 +470,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "f65a108c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.831792361459786"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -441,10 +494,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "59098c7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.550395945753099"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# What about the standard deviation?\n",
     "np.std(d)"
@@ -452,13 +516,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "7f9d7cc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# How many data points did we get?\n",
     "np.size(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a897c1bb",
+   "metadata": {},
+   "source": [
+    "*** 1. def __data name_ ( ): \n",
+    "*don't forget the indentation \n",
+    "\n",
+    "\n",
+    "\n",
+    "2. import numpy as np \n",
+    "3. data = mean + sd*np.random.randn(10,1)\n",
+    "the dataset generated will not exactly give out the exact mean and SD due to the random noise (random.randn)\n",
+    "assign variable to the dataset: d = 'name of the dataset' \n",
+    "4. to find out mean : np.mean (d)\n",
+    "5. to find sd: np.std(d)\n",
+    "6. size of the datset: np.size(d) ***\n"
    ]
   },
   {
@@ -470,7 +564,8 @@
     "  - different numbers, \n",
     "  - a mean around `5`, \n",
     "  - a standard deviation around `2` and \n",
-    "  - a numerosity (the size) of the sample of `10`."
+    "  - a numerosity (the size) of the sample of `10`.\n",
+    "  Because of the 'random' function. "
    ]
   },
   {
@@ -485,11 +580,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "1a1d63f4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.159692587093895"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def mybrain(): \n",
+    "    import numpy as np \n",
+    "    data = 5 + 0.5*np.random.randn (15,1)\n",
+    "    return data \n",
+    "butterflies = mybrain ()\n",
+    "np.mean(butterflies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "111a355d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5549079700795673"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(butterflies)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1fc06cfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "np.size(butterflies)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -509,6 +665,14 @@
     "It is `d` that we can use as data and it is `d` that we can study. So a new piece of learning here:\n",
     " - Python functions can return internal variables but the variables must be assigned to output variables to be used outside of the function."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67376205",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -540,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0650650e",
    "metadata": {},
    "outputs": [],
@@ -553,12 +717,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "0434428a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = my_awesome_data()"
+    "# we ask for 10 numbers with mean of 5, and standard deviation of 2\n",
+    "#(standard_deviation sets the random variability in the numbers)\n",
+    "d = my_awesome_data(5,2, 10)"
    ]
   },
   {
@@ -1001,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
