--- a/tutorial006.ipynb
+++ b/tutorial006.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "8e332af5",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "86bef4fc",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "0855ede6",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "e8df1330",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "8f189247",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
    "source": [
     "$\\color{blue}{\\text{Answer the following question:}}$\n",
     "\n",
-    " - What are the dimensions (the size) of the data?  [Type the Answer here]"
+    " - What are the dimensions (the size) of the data? A pandas dataframe has 2 dimensions: the rows and the columns. "
    ]
   },
   {
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "26df8b15",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "ce1bb610",
    "metadata": {},
    "outputs": [
@@ -427,7 +427,7 @@
      "evalue": "invalid syntax (4190548298.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [19]\u001b[0;36m\u001b[0m\n\u001b[0;31m    Total population\tPopulation aged 0–14 (%)\tPopulation aged 15–64 (%)\tPopulation aged 65+ (%)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Input \u001b[0;32mIn [14]\u001b[0;36m\u001b[0m\n\u001b[0;31m    Total population\tPopulation aged 0–14 (%)\tPopulation aged 15–64 (%)\tPopulation aged 65+ (%)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "fa9b0eac",
    "metadata": {},
    "outputs": [
@@ -567,7 +567,7 @@
        "4 -0.689790 -0.088941"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "1dbf860e",
    "metadata": {},
    "outputs": [
@@ -654,7 +654,7 @@
        "99  0.833993 -0.372451"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "806a1791",
    "metadata": {},
    "outputs": [
@@ -1118,7 +1118,7 @@
        " 'xs']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "cc0d7259",
    "metadata": {},
    "outputs": [
@@ -1225,7 +1225,7 @@
        "max      5.092458    2.669149"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1243,7 @@
     "\n",
     " - Describe in your own words what the method describe returns of the data. Describe the measures the method returns.\n",
     " \n",
-    " [The method describe returns the statistics of the data in the data file. It measures the count, mean, std, min, the first quartile,the median quartile,and the third quartile, and maximum. ]"
+    " The describe method returns the statistics of the data in the data file. It measures the count, mean, std, min, the first quartile,the median quartile,and the third quartile, and maximum."
    ]
   },
   {
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "14267424",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1269,7 @@
        "        <AxesSubplot:title={'center':'VarB'}>]], dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "31cd1654",
    "metadata": {},
    "outputs": [
@@ -1345,7 +1345,7 @@
        "<AxesSubplot:ylabel='Count'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
