--- a/tutorial010-ControlFlowTwo-IFLogic.ipynb
+++ b/tutorial010-ControlFlowTwo-IFLogic.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "6d8b3d4f",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "11"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c8841a2d",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "391f5de7",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "788198b2",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "cb0db7bc",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "c6149376",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,28 @@
     "\n",
     "  - Now you test `x` to see if it's not equal to `11`. Is it?\n",
     "\n",
-    "  [Use the cell below to show your code]\n"
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2ae14461",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x != 11"
    ]
   },
   {
@@ -339,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "766b0b79",
    "metadata": {},
    "outputs": [
@@ -371,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "0341c2e5",
    "metadata": {},
    "outputs": [
@@ -404,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "6881fe80",
    "metadata": {},
    "outputs": [
@@ -438,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "af350e32",
    "metadata": {},
    "outputs": [
@@ -488,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "2e7971d8",
    "metadata": {},
    "outputs": [],
@@ -509,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "ac5b3a01",
    "metadata": {},
    "outputs": [
@@ -519,7 +540,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "3e356893",
    "metadata": {},
    "outputs": [
@@ -548,7 +569,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "60f940f3",
    "metadata": {},
    "outputs": [
@@ -577,7 +598,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "9aea94b6",
    "metadata": {},
    "outputs": [
@@ -606,7 +627,7 @@
        "False"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "d396d15b",
    "metadata": {},
    "outputs": [
@@ -646,7 +667,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "d0f2bd04",
    "metadata": {},
    "outputs": [
@@ -686,7 +707,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "2e442d2d",
    "metadata": {},
    "outputs": [
@@ -717,7 +738,7 @@
        "False"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "8ca7b2b6",
    "metadata": {},
    "outputs": [
@@ -746,7 +767,7 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "6fcc8c83",
    "metadata": {},
    "outputs": [
@@ -775,7 +796,7 @@
        "False"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,31 +830,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "id": "6d22b002",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [26]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m x: \n\u001b[1;32m      3\u001b[0m     x \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m3\u001b[39m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m ( x \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m3\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 is smaller than 3\n",
+      "4 times 5 is equal to 20\n",
+      "The square of 2 is smaller than the square of 1\n",
+      "4 times 5 is equal to 20\n"
      ]
     }
    ],
    "source": [
-    "x = 3\n",
-    "for i in x: \n",
-    "    x > 3\n",
-    "    print ( x > 3)\n",
-    "for i in x: \n",
-    "    root = i ** 0.5 \n",
-    "    root < 1 \n",
-    "    print (root < 1)"
+    "a = [2, 2**0.5,4*5]\n",
+    "b = [3, 1**0.5, 20]\n",
+    "c = [0, 1, 2]\n",
+    "\n",
+    "for i in c : \n",
+    "    if a[i] > b[i] :\n",
+    "        print ('The square of 2 is smaller than the square of 1')\n",
+    "    if a[i] < b[i]:\n",
+    "        print ('2 is smaller than 3')\n",
+    "    if a[i] != b[i] : \n",
+    "        print ('4 times 5 is equal to 20')"
    ]
   },
   {
@@ -846,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "id": "545dbce7",
    "metadata": {},
    "outputs": [
@@ -873,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "id": "e79ac644",
    "metadata": {},
    "outputs": [
@@ -891,14 +914,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cae6c77e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "cf476a55",
    "metadata": {},
@@ -908,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "id": "8e8e9b83",
    "metadata": {},
    "outputs": [
@@ -935,25 +950,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "id": "1e2aeb00",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [47]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m lasttwo \u001b[38;5;241m=\u001b[39m \u001b[43mSanyak\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(lasttwo)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 5, 6]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "lasttwo = Sanyak(0,3)\n",
-    "print(lasttwo)"
+    "Sanyak [0:-2]"
    ]
   },
   {
@@ -966,11 +979,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "d9aef5aa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 6, 8]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Sanyak [0:5:2]"
+   ]
   },
   {
    "cell_type": "markdown",
