--- a/tutorial011-Numpy-Introduction.ipynb
+++ b/tutorial011-Numpy-Introduction.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 133,
    "id": "42710c7c",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 66,
    "id": "0a06fd7b",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "['this', 3, 'list']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 67,
    "id": "24a6dbc5",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        "['list', (4+2j), 6.66]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "id": "f32671ee",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "['this', 3, 'list', (4+2j), 6.66]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "id": "8b1ab9a8",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "id": "43a39707",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 85,
    "id": "26c71a2f",
    "metadata": {},
    "outputs": [
@@ -277,13 +277,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2  4  6  8  9 10]\n"
+      "[8, 6.8, 4j]\n"
      ]
     }
    ],
    "source": [
-    "myarr = np.array([2, 4, 6, 8, 9, 10])\n",
-    "print(myarr)"
+    "np.array = ([8, 6.8, 4j])\n",
+    "print(np.array)"
    ]
   },
   {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 95,
    "id": "582f0f51",
    "metadata": {},
    "outputs": [
@@ -304,11 +304,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2  4  6  8  9 10]\n"
+      "[8, 6.8, 4j, 8, 11]\n"
      ]
     }
    ],
    "source": [
+    "myarr = ([8, 6.8, 4j, 8, 11])\n",
     "print(myarr)"
    ]
   },
@@ -322,17 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 96,
    "id": "f5cffedf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2,  4,  6,  8,  9, 10])"
+       "[8, 6.8, 4j, 8, 11]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,17 +352,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 97,
    "id": "3d71ad59",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "11"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,17 +373,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 98,
    "id": "c363d45e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 8,  9, 10])"
+       "[4j, 8, 11]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 99,
    "id": "687db55e",
    "metadata": {},
    "outputs": [
@@ -413,12 +414,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8, 6.8, 4j]\n"
+      "[8, 6.8, 4j, 8]\n"
      ]
     }
    ],
    "source": [
-    "np.array = ([8, 6.8, 4j])\n",
+    "np.array = ([8, 6.8, 4j, 8])\n",
     "print(np.array)"
    ]
   },
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 100,
    "id": "75af8e7c",
    "metadata": {},
    "outputs": [
@@ -462,32 +463,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 113,
    "id": "a3b92752",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "mylistHomogeneous = [2, 3.14, 10.5, 11.13, 12.7, 4.31]\n",
+    "mylistHomogeneous = (8, 6.8, 4j, 8)\n",
+    "import numpy as np\n",
+    "import array as arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "5a666007",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [118]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m myArrFromList \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmylistHomogeneous\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     ]
+    }
+   ],
+   "source": [
     "myArrFromList = np.array(mylistHomogeneous)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 119,
    "id": "f2284fad",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 2.  ,  3.14, 10.5 , 11.13, 12.7 ,  4.31])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'myArrFromList' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [119]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmyArrFromList\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'myArrFromList' is not defined"
+     ]
     }
    ],
    "source": [
@@ -512,19 +537,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 120,
    "id": "87a02129",
    "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "can only concatenate list (not \"int\") to list",
+     "evalue": "can only concatenate tuple (not \"int\") to tuple",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [21]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmylistHomogeneous\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
+      "Input \u001b[0;32mIn [120]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmylistHomogeneous\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate tuple (not \"int\") to tuple"
      ]
     }
    ],
@@ -542,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 121,
    "id": "056f7707",
    "metadata": {},
    "outputs": [
@@ -553,13 +578,13 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [22]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmyArrFromList\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m5\u001b[39m\n",
+      "Input \u001b[0;32mIn [121]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmyArrFromList\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m5\u001b[39m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'myArrFromList' is not defined"
      ]
     }
    ],
    "source": [
-    "myArrFromList + 5"
+    "myArrFromList + 5 #One major reason we use arrays is to perform some math on the elements. Math functions can only be applied to data in arrays, not lists\n"
    ]
   },
   {
@@ -583,10 +608,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "25402aad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array = ([6, 7, 8, 9, 10, 11, 12])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "bc8d57be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<module 'array' from '/Users/sanyakotian/opt/anaconda3/lib/python3.9/lib-dynload/array.cpython-39-darwin.so'>\n",
+      " 7 7 7 7 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.append (arr, [7])\n",
+    "print(arr)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3c1e2e88",
    "metadata": {},
-   "source": []
+   "source": [
+    "This is called **appending** values to an array. "
+   ]
   },
   {
    "cell_type": "markdown",
