--- a/tutorial011-Numpy-Introduction.ipynb
+++ b/tutorial011-Numpy-Introduction.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 134,
    "id": "42710c7c",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 135,
    "id": "0a06fd7b",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "['this', 3, 'list']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 136,
    "id": "24a6dbc5",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        "['list', (4+2j), 6.66]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 137,
    "id": "43a39707",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 138,
    "id": "26c71a2f",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 139,
    "id": "582f0f51",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 140,
    "id": "f5cffedf",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "[8, 6.8, 4j, 8, 11]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 141,
    "id": "3d71ad59",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
        "11"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 142,
    "id": "c363d45e",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
        "[4j, 8, 11]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 143,
    "id": "687db55e",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 144,
    "id": "75af8e7c",
    "metadata": {},
    "outputs": [
@@ -463,60 +463,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 163,
    "id": "a3b92752",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "mylistHomogeneous = (8, 6.8, 4j, 8)\n",
-    "import numpy as np\n",
-    "import array as arr"
+    "mylistHomogeneous = (8, 6.8, 4j, 9)\n",
+    "myarrayHomogeneous = [8, 6.8, 4j, 9]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "5a666007",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [118]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m myArrFromList \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m[\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmylistHomogeneous\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
-     ]
-    }
-   ],
-   "source": [
-    "myArrFromList = np.array(mylistHomogeneous)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 164,
    "id": "f2284fad",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'myArrFromList' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [119]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmyArrFromList\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'myArrFromList' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 6.8, 4j, 9]\n"
      ]
     }
    ],
    "source": [
-    "myArrFromList"
+    "print(myarrayHomogeneous)"
    ]
   },
   {
@@ -537,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 165,
    "id": "87a02129",
    "metadata": {},
    "outputs": [
@@ -548,13 +521,13 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [120]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmylistHomogeneous\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\n",
+      "Input \u001b[0;32mIn [165]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmylistHomogeneous\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\n",
       "\u001b[0;31mTypeError\u001b[0m: can only concatenate tuple (not \"int\") to tuple"
      ]
     }
    ],
    "source": [
-    "mylistHomogeneous + 5 "
+    "mylistHomogeneous + 5 #cannot perform mathematical functions with lists. "
    ]
   },
   {
@@ -567,24 +540,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 166,
    "id": "056f7707",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'myArrFromList' is not defined",
+     "ename": "TypeError",
+     "evalue": "can only concatenate list (not \"int\") to list",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [121]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmyArrFromList\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m5\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'myArrFromList' is not defined"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [166]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmyarrayHomogeneous\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
      ]
     }
    ],
    "source": [
-    "myArrFromList + 5 #One major reason we use arrays is to perform some math on the elements. Math functions can only be applied to data in arrays, not lists\n"
+    "myarrayHomogeneous + 5 #One major reason we use arrays is to perform some math on the elements. Math functions can only be applied to data in arrays, not lists\n"
    ]
   },
   {
@@ -602,38 +575,35 @@
    "source": [
     "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
     "\n",
-    "  - What happens when you add a number to a `NumPy array`? How do the content of the array change?\n",
-    "\n",
-    "  [Use the cell below to show answer the question]"
+    "  - What happens when you add a number to a `NumPy array`? How do the content of the array change?\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "id": "25402aad",
+   "execution_count": 167,
+   "id": "d198f464",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.array = ([6, 7, 8, 9, 10, 11, 12])"
+    "np.array = ([6, 7, 8, 9, 10.3, 11, 12])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "bc8d57be",
+   "execution_count": 168,
+   "id": "0fe960fe",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<module 'array' from '/Users/sanyakotian/opt/anaconda3/lib/python3.9/lib-dynload/array.cpython-39-darwin.so'>\n",
-      " 7 7 7 7 7]\n"
+      "[ 6.   7.   8.   9.  10.3 11.  12.   7. ]\n"
      ]
     }
    ],
    "source": [
-    "arr = np.append (arr, [7])\n",
+    "arr = np.append (np.array, [7])\n",
     "print(arr)"
    ]
   },
@@ -650,18 +620,32 @@
    "id": "5a773b69",
    "metadata": {},
    "source": [
-    "  - Create a new `array` and multiply the array by a complex number:\n",
-    "\n",
-    "  [Use the cell below to show your code]"
+    "  - Create a new `array` and multiply the array by a complex number:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 182,
    "id": "81ae359b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'j' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [182]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m np\u001b[38;5;241m.\u001b[39marray \u001b[38;5;241m=\u001b[39m ([\u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m8\u001b[39m])\n\u001b[0;32m----> 2\u001b[0m d \u001b[38;5;241m=\u001b[39m \u001b[43mj\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m (np\u001b[38;5;241m.\u001b[39marray \u001b[38;5;241m*\u001b[39m d)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'j' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "np.array = ([6, 5, 4, 3, 8])\n",
+    "d = j\n",
+    "print (np.array * d)"
+   ]
   },
   {
    "cell_type": "markdown",
